
[package]
name = "adblock"
version = "0.3.1"
authors = ["Andrius Aucinas <aaucinas@brave.com>", "Anton Lazarev <alazarev@brave.com>"]
edition = "2018"

description = "Native Rust module for Adblock Plus syntax (e.g. EasyList, EasyPrivacy) filter parsing and matching."
repository = "https://github.com/brave/adblock-rust/"
license = "MPL-2.0"
readme = "README.md"

exclude = [
    "data/requests.json",
    "data/matching-tests-requests.json",
    "data/ublock-matches.tsv",
    "data/easylist-parse-errors.log",
]

[package.metadata.docs.rs]
no-default-features = true
features = ["default-docs-rs"]

[dependencies]
addr = { version = "0.2", optional = true }
url = "2.1"
percent-encoding = "2.1"
matches = "0.1"
lazy_static = "1.4"
once_cell = "1.4"
regex = "1"
bitflags = "1.2"
itertools = "0.8"
idna = "0.2"
serde =  { version = "1.0.101", features = ["derive", "rc"] }
flate2 = { version = "1.0.12", features = ["rust_backend"], default-features = false }
seahash = "3"
twoway = "0.2"
base64 = "0.10"
rmp-serde = "0.13.7"    # rmp-serde 0.14.0 breaks deserialization by changing how enums are deserialized
hashbrown = { version = "0.6", features = ["serde"] }
lifeguard = { version = "0.6", optional = true }
cssparser = { version = "0.25", optional = true }
selectors = { version = "0.21", optional = true }

[dev-dependencies]
criterion = "0.2"
csv = "1"
serde_json = "1.0"
reqwest = "0.10"
futures = "0.3"
tokio = "0.2"

[lib]
bench = false

[[bench]]
name = "bench_regex"
harness = false

[[bench]]
name = "bench_matching"
harness = false

[[bench]]
name = "bench_url"
harness = false

[[bench]]
name = "bench_rules"
harness = false

[[bench]]
name = "bench_redirect_performance"
harness = false

[[bench]]
name = "bench_cosmetic_matching"
harness = false

[features]
# If disabling default features, consider explicitly re-enabling the
# "embedded-domain-resolver" feature.
default = ["default-docs-rs", "docs-rs-incompatible"]
default-docs-rs = ["full-regex-handling", "object-pooling"]
full-domain-matching = []
metrics = []
full-regex-handling = []
object-pooling = ["lifeguard"]
css-validation = ["cssparser", "selectors"]
embedded-domain-resolver = ["addr"] # Requires setting an external domain resolver if disabled.
docs-rs-incompatible = ["embedded-domain-resolver"] # addr prevents docs.rs builds, see https://github.com/rust-lang/docs.rs/issues/904
