[package]
name = "adblock"
version = "0.4.2"
authors = ["Andrius Aucinas <aaucinas@brave.com>", "Anton Lazarev <alazarev@brave.com>"]
edition = "2018"

description = "Native Rust module for Adblock Plus syntax (e.g. EasyList, EasyPrivacy) filter parsing and matching."
repository = "https://github.com/brave/adblock-rust/"
license = "MPL-2.0"
readme = "README.md"

exclude = [
    "data/requests.json",
    "data/matching-tests-requests.json",
    "data/ublock-matches.tsv",
    "data/easylist-parse-errors.log",
]

[dependencies]
addr = { version = "0.14", default-features = false, features = ["psl"], optional = true }
url = "2.2"
percent-encoding = "2.1"
once_cell = "1.8"
regex = "1.5"
bitflags = "1.2"
itertools = "0.10"
idna = "0.2"
serde =  { version = "1.0", features = ["derive", "rc"] }
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
seahash = "3"   # seahash 4 introduces a breaking hash algorithm change
twoway = "0.2"
base64 = "0.13"
rmp-serde-legacy = { package = "rmp-serde", version = "0.13.7" }    # rmp-serde 0.14.0 breaks deserialization by changing how enums are deserialized
rmp-serde = "0.15"
lifeguard = { version = "^ 0.6.1", optional = true }
cssparser = { version = "0.28", optional = true }
selectors = { version = "0.23", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"
csv = "1"
serde_json = "1.0"
reqwest = "0.11"
futures = "0.3"
tokio = { version = "1.8", features = ["rt-multi-thread"] }
sha2 = "0.9"

[lib]
bench = false

[[bench]]
name = "bench_regex"
harness = false

[[bench]]
name = "bench_matching"
harness = false

[[bench]]
name = "bench_url"
harness = false

[[bench]]
name = "bench_rules"
harness = false

[[bench]]
name = "bench_redirect_performance"
harness = false

# Currently disabled, as cosmetic filter internals
# are no longer part of the crate's public API
#[[bench]]
#name = "bench_cosmetic_matching"
#harness = false

[features]
# If disabling default features, consider explicitly re-enabling the
# "embedded-domain-resolver" feature.
default = ["embedded-domain-resolver", "full-regex-handling", "object-pooling"]
full-domain-matching = []
metrics = []
full-regex-handling = []
object-pooling = ["lifeguard"]
css-validation = ["cssparser", "selectors"]
content-blocking = ["serde_json"]
embedded-domain-resolver = ["addr"] # Requires setting an external domain resolver if disabled.
resource-assembler = ["serde_json"]
