[package]
name = "adblock-rust-wasm"
version = "0.1.0"
authors = ["Andrius Aucinas <aaucinas@brave.com>"]
edition = "2018"

[dependencies]
adblock = { path = "../", version = "0.1.0" }
wasm-bindgen = {version = "^0.2", features = ["nightly"]}
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "^0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
