[package]
name = "adblock-rs-wasm"
version = "0.1.5"
authors = ["Andrius Aucinas <aaucinas@brave.com>"]
edition = "2018"

description = "Native Rust module for Adblock Plus syntax (e.g. EasyList, EasyPrivacy) filter parsing and matching, compiled to WASM"
repository = "https://github.com/brave/adblock-rust/"
license = "MPL-2.0"
readme = "../README.md"

[dependencies]
adblock = { path = "../", version = "0.1" }
wasm-bindgen = {version = "^0.2", features = ["nightly"]}
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
# fasthash = "0.4"

[dev-dependencies]
wasm-bindgen-test = "^0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
