[package]
name = "adblock-rs"
version = "0.9.0"
authors = ["Anton Lazarev <alazarev@brave.com>", "Andrius Aucinas"]
edition = "2018"
license = "MPL-2.0"
exclude = ["artifacts.json", "index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde =  { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
adblock = { path = "../", features = ["css-validation", "content-blocking", "resource-assembler"] }
neon = { version = "^0.10.1", default-features = false, features = ["napi-1"] }
