[package]
name = "adblock-rs"
version = "0.10.2"
authors = ["Anton Lazarev <alazarev@brave.com>", "Andrius Aucinas"]
edition = "2021"
license = "MPL-2.0"
exclude = ["artifacts.json", "index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
adblock = { path = "../", features = ["css-validation", "content-blocking", "resource-assembler"] }
neon = { version = "^0.10.1", default-features = false, features = ["napi-1"] }

[features]
default-panic-hook = []
