[package]
name = "adblock-rs"
version = "0.12.1"
authors = ["Anton Lazarev <alazarev@brave.com>", "Andrius Aucinas"]
edition = "2021"
license = "MPL-2.0"
exclude = ["artifacts.json", "index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
serde = { workspace = true }
serde_json = { workspace = true }
adblock = { path = "../", features = ["css-validation", "content-blocking", "resource-assembler"] }

[build-dependencies]
napi-build = "2"
