[package]
name = "adblock-rs"
version = "0.3.14"
authors = ["Andrius Aucinas <aaucinas@brave.com>", "Anton Lazarev <alazarev@brave.com>"]
edition = "2018"
license = "MPL-2.0"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "adblock_rs"
crate-type = ["cdylib"]

[dependencies]
neon-serde = { git = "https://github.com/antonok-edm/neon-serde", branch = "refactor/update-neon-0.8" }
serde =  { version = "1.0", features = ["derive", "rc"] }
adblock = { path = "../", features = ["css-validation", "content-blocking", "resource-assembler"] }
neon = { version = "^ 0.8", default-features = false, features = ["napi-1"] }
