[package]
name = "adblock-node-native"
version = "0.1.0"
authors = ["Andrius Aucinas <aaucinas@brave.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "adblock_node_native"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
adblock = { path = "../../", version = "0.1.0" }
